# Elytra-OS

./: .gitignore  Cargo.toml  README.md  build.rs  script.gdb
gdb/: README.md  gdb_load_rust_pretty_printers.py  gdb_lookup.py  gdb_providers.py  init.gdb  rust_types.py
kernel/: Cargo.toml
kernel/src/: consts.rs  gdt.rs  helper.rs  idt.rs  isr.rs  main.rs  msr.rs  page_table.rs  startup.rs  test.rs
kernel/src/io/: framebuffer.rs  mod.rs  output.rs  port.rs  serial.rs
kernel/src/mem/: buddy.rs  mod.rs  page_table.rs  slab.rs
kernel/src/primitives/: doubly_list_head.rs  list_head.rs  mod.rs  singly_list_head.rs
kernel/src/user/: address_space.rs  elf_parser.rs  elf_structure.rs  mod.rs  syscall.rs  task.rs  test_task.rs
kernel/src/user/sched/: mod.rs
src/: main.rs
tests/: test  test.c
