[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.12"
bitbybit = "1.4.0"
arbitrary-int = "2.0.0"
bitvec = { version = "1.0.1", default-features = false }
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
spin = "0.10.0"
noto-sans-mono-bitmap = { version = "0.3.2", default-features = false, features = [
    "size_20",
    "regular",
    "unicode-basic-latin",
    "unicode-specials",
] }
